fix team list on mobile screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,9 +344,13 @@ hr {
     }
 }
 /*To replace the team list and hero image to fit screen*/
-@media screen and (min-width: 0px) and (max-width: 768px) {
+@media screen and (min-width: 321px) and (max-width: 768px) {
     #only-mobile { display: block; 
     padding: 0 20px 0 90px}
+}
+@media screen and (min-width: 0px) and (max-width: 320px) {
+    #only-mobile { display: block; 
+    padding: 0 20px 0 40px}
 }
 @media screen and (min-width: 769px) {
     #only-mobile { display: none; }
